src/test/ui/parser/pat-ranges-4.rs
// Parsing of range patterns

fn main() {
    let 10 - 3 ..= 10 = 8;
    //~^ error: expected one of `...`, `..=`, `..`, `:`, `;`, or `=`, found `-`
}
